--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -36,3 +36,17 @@ mybatis.configuration.map-underscore-to-camel-case=true
 #JSP Location
 spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
+
+management.endpoints.web.exposure.include=health,info,shutdown
+management.endpoint.shutdown.enabled=true
+
+#OCR Model Data
+ocr.model.data=C:/model/tessdata
+
+# Feign ??
+feign.client.config.sentimentClient.connectTimeout=2000
+feign.client.config.sentimentClient.readTimeout=3000
+feign.client.config.sentimentClient.loggerLevel=FULL
+
+# API ?? URL
+sentiment.base-url=https://kosent.k-bigdata.kr
