--- a/CriminalEyes/src/main/resources/application.properties
+++ b/CriminalEyes/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.mail.host=smtp.naver.com
 spring.mail.port=465
 spring.mail.username=ssc9023@naver.com
 # ??? ???
-spring.mail.password=3QTXXPUZV4KF
+spring.mail.password=
 # 2? ????
 spring.mail.default-encoding=UTF-8
 spring.mail.properties.mail.smtp.auth=true
